[gd_scene load_steps=5 format=3 uid="uid://ycrcchgsmjcc"]

[ext_resource type="Script" uid="uid://dahod6ykaxcqp" path="res://scripts/display/value_display.gd" id="1_ymjym"]
[ext_resource type="Script" uid="uid://b0noujqe7pyop" path="res://chartr/scripts/chartr.gd" id="2_ymjym"]
[ext_resource type="Script" uid="uid://nq4yml0kgxrx" path="res://chartr/scripts/chartr_settings.gd" id="3_sxyj6"]

[sub_resource type="Resource" id="Resource_bcibk"]
script = ExtResource("3_sxyj6")
x_axis_labels = [null, null, null, null, null, null, null, null]
auto_y_axis_labels = true
metadata/_custom_type_script = "uid://nq4yml0kgxrx"

[node name="ValueController" type="PanelContainer" node_paths=PackedStringArray("chart", "current_value_label")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ymjym")
chart = NodePath("VBoxContainer/Chartr")
current_value_label = NodePath("VBoxContainer/CurrentValueLabel")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="CurrentValueLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
horizontal_alignment = 2

[node name="Chartr" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2_ymjym")
settings = SubResource("Resource_bcibk")
metadata/_custom_type_script = "uid://b0noujqe7pyop"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "-10"

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "-1"

[node name="Button3" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "reset"

[node name="Button4" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "+1"

[node name="Button5" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "+10"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_mass_subtract_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button2" to="." method="_on_subtract_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button3" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button4" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button5" to="." method="_on_mass_add_button_pressed"]
